--- a/semagrow-multimodule-module/pom.xml
+++ b/semagrow-multimodule-module/pom.xml
@@ -10,6 +10,6 @@
   <artifactId>semagrow-multimodule-module</artifactId>
   <version>1.0.0-rc1</version>
   <packaging>jar</packaging>
-  <module>semagrow-multimodule-module</module>
+  <name>semagrow-multimodule-module</name>
 </project>
 
