--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>eu.semagrow.stack.archetypes</groupId>
-  <artifactId>semagrow-module-archetypes</artifactId>
-  <version>1.0.0-rc1</version>
-  <packaging>pom</packaging>
-  <name>semagrow-module-archetypes</name>
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>eu.semagrow.stack.archetypes</groupId>
+    <artifactId>semagrow-module-archetypes</artifactId>
+    <version>1.0.0-rc1</version>
+    <packaging>pom</packaging>
+    <name>semagrow-module-archetypes</name>
 
     <properties>
         <distribution.site>/var/www/docs/${project.artifactId}/${project.version}</distribution.site>
@@ -27,10 +27,25 @@
             <url>file://${distribution.mvn}</url>
         </repository>
     </distributionManagement>
-
-  <modules>
-    <module>semagrow-module</module>
-    <module>semagrow-multimodule-module</module>
-  </modules>
+    <build>
+        <extensions>
+            <extension>
+                <groupId>org.apache.maven.archetype</groupId>
+                <artifactId>archetype-packaging</artifactId>
+                <version>2.0</version>
+            </extension>
+        </extensions>
+        <plugins>
+            <plugin>
+                <artifactId>maven-archetype-plugin</artifactId>
+                <version>2.0</version>
+                <extensions>true</extensions>
+            </plugin>
+        </plugins>
+    </build>
+    <modules>
+        <module>semagrow-module</module>
+        <module>semagrow-multimodule-module</module>
+    </modules>
 </project>
 
