--- a/semagrow-multimodule-module/pom.xml
+++ b/semagrow-multimodule-module/pom.xml
@@ -11,5 +11,23 @@
     <version>1.0.0-rc1</version>
     <packaging>maven-archetype</packaging>
     <name>semagrow-multimodule-module</name>
+    <build>
+        <plugins>
+            <plugin>
+                <artifactId>maven-archetype-plugin</artifactId>
+                <version>2.0</version>
+                <executions>
+                    <execution>
+                        <id>update-catalog</id>
+                        <phase>install</phase>
+                        <goals>
+                            <goal>update-local-catalog</goal>
+                        </goals>
+                        <configuration/>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
 
